style/main.css
body {
	font-family: Arial, Helvetica, sans-serif;
}

html, body, main {
	height: 100%;
}

body {
	overflow: hidden;
}

#paellaVideoContainer {
	position: relative;
	background:
	repeating-linear-gradient(
		45deg,
		#6F6F6F,
		#6F6F6F 10px,
		#3F3F3F 10px,
		#3F3F3F 20px
	);
	height: 100%;
	width:80%;
}

#sideBar {
	background-color: #8A8A8A;
	width:20%;
	height: 100%;
	top: 0px;
	right: 0px;
	padding-left: 8px;
	position: absolute;
	overflow: auto;
}

#topContainer {
	position: relative;
	height: 65%;
	width: 100%;
}

#timeLineBar {
	height: 35%;
	background-color: #8A8A8A;
	overflow: auto;
	padding-top: 6px;
}

#resizerH {
	position: fixed;
	z-index: 10;
	left: 0px;
	right: 0px;
	height: 6px;
	background-color: darkgray;
	cursor: ns-resize;
	border-top:2px solid #444444;
	border-bottom:2px solid #444444;
}

#resizerV {
	position: absolute;
	z-index: 10;
	top: 0px;
	left: 80%;
	bottom: 0px;
	width: 6px;
	background-color: darkgray;
	cursor: ew-resize;
	border-left:2px solid #444444;
	border-right:2px solid #444444;
}

#playerContainer {
	position: absolute;
	top: 20px;
	left: 35px;
	right: 20px;
	bottom: 20px;
}

loader .pe-loader {
	z-index: 99999999999;
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    background-color: rgba(255, 255, 255, 0.55);
}

